unpackaged/main/default/objects/Picklist_Master__c/Picklist_Master__c.object-meta.xml
<CustomObject>
    <description>This object will have the picklist master details. E.g Time Zone. The time zone literals will be there in Picklist Details object</description>
    <label>Picklist Master</label>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>