unpackaged/main/default/objects/Picklist_Master__c/fields/Data_Load_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Data Load External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>