unpackaged/main/default/objects/Picklist_Master__c/fields/Dev_Picklist_Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Picklist_Master_Id__c</fullName>
    <description>This field is used for back end data loading process, data is fetching from &#39;PFDev&#39; environment. This field is hold &#39;Picklist Master&#39; object record Id.</description>
    <label>Dev Picklist Master Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>